# pyModis

./: .gitignore  .project  AUTHORS  CHANGES  COPYING  INSTALL  MANIFEST  MANIFEST.in  README  README.rst  create_version.sh  downloadmodis.py  modis.py  pyproject.toml  setup.py
debian/: changelog  control  copyright
docker/python2/: Dockerfile
docker/python3/: Dockerfile
docs/: .conf.py.kate-swp  Makefile  conf.py  index.rst  info.rst  make.bat
docs/_static/: pymodis.css
docs/pymodis/: modules.rst  pymodis.rst
docs/scripts/: modis_convert.rst  modis_download.rst  modis_mosaic.rst  modis_multiparse.rst  modis_parse.rst  software.rst
docs/source/: conf.py  index.rst  info.rst
docs/source/_static/: pymodis.css
docs/source/_templates/: layout.html  oholosidebar.html  pdfsidebar.html
docs/source/examples/: examples.rst  full_example.rst  full_example_gdal.rst  full_example_mrt.rst  pyModis.ipynb  topng.py
docs/source/pymodis/: convertmodis.rst  convertmodis_gdal.rst  downmodis.rst  modules.rst  optparse.rst  parsemodis.rst  pymodis.rst  qualitymodis.rst
docs/source/scripts/: modis_convert.rst  modis_download.rst  modis_download_from_list.rst  modis_mosaic.rst  modis_multiparse.rst  modis_parse.rst  modis_quality.rst  software.rst
pymodis/: __init__.py  convertmodis.py  convertmodis_gdal.py  downmodis.py  optparse_gui.py  optparse_required.py  parsemodis.py  productmodis.py  qualitymodis.py
rpm/: python-pymodis.changes  python-pymodis.spec
scripts/: modis_check.py  modis_convert.py  modis_download.py  modis_download_from_list.py  modis_missings.py  modis_mosaic.py  modis_multiparse.py  modis_parse.py  modis_quality.py
